🎨 update button ui

--- a/portfolio-frontend/src/app/header/header.component.html
+++ b/portfolio-frontend/src/app/header/header.component.html
@@ -2,20 +2,32 @@
 <header class="w-screen h-96 bg-gradient-to-r from-blue-800 to-blue-900">
     <!--CONTENT CONTAINER-->
     <div class="max-w-7xl h-full m-auto grid grid-cols-1 md:grid-cols-2 items-center overflow-hidden gap-4 px-4">
-  
+
       <!--PRESENTATION CONTAINER-->
       <div>
         <p class="text-gray-200 text-xl">Hi there,</p>
         <h1 class="text-white font-bold text-7xl my-2 text-transparent bg-clip-text bg-gradient-to-r from-orange-400 to-red-600">I'm Lucas</h1>
         <p class="text-gray-200 text-xl">Full stack developer junior</p>
         <div class="mt-8 flex gap-4">
-          <a class="text-white h-8 flex items-center px-4 rounded-xl bg-orange-400" href="#">Let's talk</a>
-          <a class="text-white h-8 flex items-center px-4 rounded-xl border-2 border-orange-400" href="#">Let's talk</a>
+
+          <!--Button primary-->
+          <a class="text-white h-9 flex items-center px-4 rounded-xl bg-orange-400 gap-2 hover:shadow-md hover:bg-orange-500" href="#">
+            <img class="w-6" src="../../assets/icon/mail.svg" alt="">
+            <p>Let's talk</p>
+          </a>
+
+          <!--Button secundary-->
+          <a class="text-white h-9 flex items-center px-4 rounded-xl border-2 border-orange-400 gap-2 hover:shadow-md hover:border-orange-500" href="#">
+            <img class="w-6" src="../../assets/icon/redirect.svg" alt="">
+            <p>View my works</p>
+          </a>
+
         </div>
       </div>
   
       <!--PICTURE CONTAINER-->
       <div class="bg-slate-400 w-full h-full hidden md:block">
+        
       </div>
   
     </div>
