--- a/portfolio-frontend/src/app/header/header.component.html
+++ b/portfolio-frontend/src/app/header/header.component.html
@@ -5,20 +5,20 @@
 
       <!--PRESENTATION CONTAINER-->
       <div>
-        <p class="text-gray-200 text-xl">Hi there,</p>
-        <h1 class="text-white font-bold text-7xl my-2 text-transparent bg-clip-text bg-gradient-to-r from-orange-400 to-red-600">I'm Lucas</h1>
-        <p class="text-gray-200 text-xl">Full stack developer junior</p>
+        <p class="text-gray-200 text-md md:text-xl">Hi there,</p>
+        <h1 class="text-white font-bold text-5xl md:text-7xl my-2 text-transparent bg-clip-text bg-gradient-to-r from-orange-400 to-red-600">I'm Lucas</h1>
+        <p class="text-gray-200 text-md md:text-xl">Full stack developer junior</p>
         <div class="mt-8 flex gap-4">
 
           <!--Button primary-->
-          <a class="text-white h-9 flex items-center px-4 rounded-xl bg-orange-400 gap-2 hover:shadow-md hover:bg-orange-500" href="#">
+          <a class="text-white h-8 md:h-9 flex items-center px-4 rounded-xl bg-orange-400 gap-2 hover:shadow-md hover:bg-orange-500" href="#">
             <img class="w-6" src="../../assets/icon/mail.svg" alt="">
-            <p>Let's talk</p>
+            <p class="text-sm sm:text-md">Let's talk</p>
           </a>
 
           <!--Button secundary-->
-          <a class="text-white h-9 flex items-center px-4 rounded-xl border-2 border-orange-400 gap-2 hover:shadow-md hover:border-orange-500" href="#">
-            <img class="w-6" src="../../assets/icon/redirect.svg" alt="">
+          <a class="text-white h-8 md:h-9 flex items-center px-4 rounded-xl border-2 border-orange-400 sm:gap-2 hover:shadow-md hover:border-orange-500" href="#">
+            <img class="text-sm sm:text-md" src="../../assets/icon/redirect.svg" alt="">
             <p>View my works</p>
           </a>
 
@@ -27,7 +27,7 @@
   
       <!--PICTURE CONTAINER-->
       <div class="bg-slate-400 w-full h-full hidden md:block">
-        
+
       </div>
   
     </div>
