--- a/portfolio-frontend/src/app/header/header.component.html
+++ b/portfolio-frontend/src/app/header/header.component.html
@@ -1,34 +1,28 @@
 <!--HEADER-->
-<header class="w-screen h-96 bg-gradient-to-r from-blue-800 to-blue-900">
+<header class="w-screen h-96 bg-gradient-to-r from-slate-800 to-slate-900">
     <!--CONTENT CONTAINER-->
-    <div class="max-w-7xl h-full m-auto grid grid-cols-1 md:grid-cols-2 items-center overflow-hidden gap-4 px-4">
+    <div class="max-w-7xl h-full m-auto grid grid-cols-1 md:grid-cols-2 items-center overflow-hidden gap-10 px-4 md:px-10">
 
       <!--PRESENTATION CONTAINER-->
       <div>
-        <p class="text-gray-200 text-md md:text-xl">Hi there,</p>
-        <h1 class="text-white font-bold text-5xl md:text-7xl my-2 text-transparent bg-clip-text bg-gradient-to-r from-orange-400 to-red-600">I'm Lucas</h1>
-        <p class="text-gray-200 text-md md:text-xl">Full stack developer junior</p>
-        <div class="mt-8 flex gap-4">
+        <p class="text-gray-100 text-md">Hi there,</p>
+        <h1 class="text-white font-bold text-4xl sm:text-7xl mt-4 mb-2">I'm Lucas</h1>
+        <p class="text-sm sm:text-md text-teal-200">FULL STACK DEVELOPER JUNIOR</p>
+        <p class="text-gray-300 text-md my-6 max-w-sm">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        <div class="mt-8 flex flex-col min-[311px]:flex-row gap-4">
 
           <!--Button primary-->
-          <a class="text-white h-8 md:h-9 flex items-center px-4 rounded-xl bg-orange-400 gap-2 hover:shadow-md hover:bg-orange-500" href="#">
-            <img class="w-6" src="../../assets/icon/mail.svg" alt="">
-            <p class="text-sm sm:text-md">Let's talk</p>
-          </a>
+          <app-button-primary></app-button-primary>
 
           <!--Button secundary-->
-          <a class="text-white h-8 md:h-9 flex items-center px-4 rounded-xl border-2 border-orange-400 sm:gap-2 hover:shadow-md hover:border-orange-500" href="#">
-            <img class="text-sm sm:text-md" src="../../assets/icon/redirect.svg" alt="">
-            <p>View my works</p>
-          </a>
+          <app-button-secundary></app-button-secundary>
 
         </div>
       </div>
   
       <!--PICTURE CONTAINER-->
-      <div class="bg-slate-400 w-full h-full hidden md:block">
-
-      </div>
-  
+      <div class="hidden md:block w-full h-96 overflow-hidden">
+        <img class="opacity-50 object-cover w-full h-96" src="../../assets/Taieri.svg" alt="">
+      </div>  
     </div>
 </header>
