--- a/portfolio-frontend/src/app/buttons/button-primary/button-primary.component.html
+++ b/portfolio-frontend/src/app/buttons/button-primary/button-primary.component.html
@@ -1,3 +1,3 @@
-<a class="h-8 flex items-center justify-center px-6 sm:px-8 py-4 rounded-full bg-teal-200 hover:bg-teal-300" href="#">
-    <p class="text-black text-sm sm:text-md">Let's talk</p>
+<a href="#" type="button" class="text-white bg-teal-500 hover:bg-teal-600 focus:outline-none focus:ring-4 focus:ring-teal-700 font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-teal-500 dark:hover:bg-teal-600 dark:focus:ring-teal-700">
+    Let's talk
 </a>
