--- a/portfolio-frontend/src/app/buttons/button-secundary/button-secundary.component.html
+++ b/portfolio-frontend/src/app/buttons/button-secundary/button-secundary.component.html
@@ -1,3 +1,1 @@
-<a class="h-8 flex items-center justify-center px-5 sm:px-7 py-3 rounded-full text-teal-200 border-2 border-teal-200 hover:border-teal-300 hover:text-teal-300" href="#">
-  <p>View my works</p>
-</a>
+<a href="" type="button" class="py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 hover:bg-gray-100 hover:text-teal-600 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">View my works</a>
