🎨 re-design header

--- a/portfolio-frontend/src/app/header/header.component.html
+++ b/portfolio-frontend/src/app/header/header.component.html
@@ -5,18 +5,17 @@
 
     <!--PRESENTATION CONTAINER-->
     <div>
-      <p class="text-gray-100 text-md">Hi there,</p>
-      <h1 class="text-white font-bold text-4xl sm:text-7xl mt-4 mb-2">I'm Lucas</h1>
-      <p class="text-sm sm:text-md text-teal-200">FULL STACK DEVELOPER JUNIOR</p>
-      <p class="text-gray-300 text-md my-6 max-w-sm">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-      <div class="mt-8 flex flex-col min-[311px]:flex-row gap-4">
+      <p class="mb-3 font-light text-gray-100">Hi there,</p>
+      <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">I'm Lucas</h1>
+      <p class="mb-3 text-teal-300">FULL STACK DEVELOPER JUNIOR</p>
+      <p class="mb-3 font-light text-gray-100">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
 
+      <!--BUTTONS-->
+      <div class="mt-10 flex flex-col min-[311px]:flex-row gap-2">
         <!--Button primary-->
         <app-button-primary></app-button-primary>
-
         <!--Button secundary-->
         <app-button-secundary></app-button-secundary>
-
       </div>
     </div>
 
