🎨 add dark mode

--- a/portfolio-frontend/src/app/app.component.html
+++ b/portfolio-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="w-screen h-screen">
+<div class="w-screen dark:bg-slate-900">
     <app-header></app-header>
     <app-skills></app-skills>
 </div>
