🎨 Implement the new design in the header

--- a/portfolio-frontend/src/app/header/header.component.html
+++ b/portfolio-frontend/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <!--HEADER-->
-<header class="w-screen h-96 bg-gradient-to-r from-slate-800 to-slate-900">
+<header class="w-screen h-96 bg-gradient-to-r from-indigo-900 to-purple-900">
   <!--CONTENT CONTAINER-->
   <div class="max-w-7xl h-full m-auto grid grid-cols-1 md:grid-cols-2 items-center overflow-hidden gap-10 px-4 md:px-10">
 
