--- a/portfolio-frontend/src/app/header/header.component.html
+++ b/portfolio-frontend/src/app/header/header.component.html
@@ -5,13 +5,13 @@
 
     <!--PRESENTATION CONTAINER-->
     <div>
-      <p class="mb-3 font-light text-gray-100">Hi there,</p>
-      <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">I'm Lucas</h1>
-      <p class="mb-3 text-teal-300">FULL STACK DEVELOPER JUNIOR</p>
-      <p class="mb-3 font-light text-gray-100">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+      <p class="mb-3 font-light text-gray-100 text-center md:text-left">Hi there,</p>
+      <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-white md:text-5xl lg:text-6xl text-center md:text-left">I'm Lucas</h1>
+      <p class="mb-3 text-teal-300 text-center md:text-left">FULL STACK DEVELOPER JUNIOR</p>
+      <p class="mb-3 font-light text-gray-100 text-center md:text-left">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
 
       <!--BUTTONS-->
-      <div class="mt-10 flex flex-col min-[311px]:flex-row gap-2">
+      <div class="mt-10 flex flex-col min-[311px]:flex-row gap-2 justify-center md:justify-start">
         <!--Button primary-->
         <app-button-primary></app-button-primary>
         <!--Button secundary-->
