--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,9 @@
       <!--BUTTONS-->
       <div class="mt-10 flex flex-col min-[311px]:flex-row gap-2 justify-center md:justify-start">
         <!--Button primary-->
-        <app-button-primary></app-button-primary>
+        <app-button-primary
+          
+        ></app-button-primary>
         <!--Button secundary-->
         <app-button-secundary></app-button-secundary>
       </div>
