--- a/src/app/components/buttons/button-primary/button-primary.component.html
+++ b/src/app/components/buttons/button-primary/button-primary.component.html
@@ -1,3 +1,3 @@
-<a href="#" type="button" class="text-white bg-teal-500 hover:bg-teal-600 focus:outline-none focus:ring-4 focus:ring-teal-700 font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-teal-500 dark:hover:bg-teal-600 dark:focus:ring-teal-700">
+<a href="#" class="text-white bg-teal-500 hover:bg-teal-600 focus:outline-none focus:ring-4 focus:ring-teal-700 font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-teal-500 dark:hover:bg-teal-600 dark:focus:ring-teal-700">
     {{content}}
 </a>
