✨ Add nav component

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="w-screen dark:bg-slate-900">
+    <app-nav></app-nav>
     <app-header></app-header>
     <app-skills></app-skills>
 </div>
