✨ Add props in buttos component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,10 +14,13 @@
       <div class="mt-10 flex flex-col min-[311px]:flex-row gap-2 justify-center md:justify-start">
         <!--Button primary-->
         <app-button-primary
-          
+        [content]="'Contact me'"
         ></app-button-primary>
+
         <!--Button secundary-->
-        <app-button-secundary></app-button-secundary>
+        <app-button-secundary
+        [content]="'View my works'"
+        ></app-button-secundary>
       </div>
     </div>
 
