--- a/src/app/components/skills-and-services/skills-and-services.component.html
+++ b/src/app/components/skills-and-services/skills-and-services.component.html
@@ -1,9 +1,9 @@
 <div class="w-full py-16 px-6">
 <!--Container-->
-<div class="m-auto max-w-7xl flex flex-col md:flex-row md:justify-between gap-10">
+<div class="m-auto max-w-7xl flex flex-col md:flex-row md:justify-between gap-10 items-center">
     <!--title and description-->
     <div class="w-full md:w-96">
-        <h3 class="mb-4 text-center md:text-left text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white">My skills & services</h3>
+        <h3 class="mb-4 text-center md:text-left text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white">My skills & services</h3>
         <p class="mb-3 text-center md:text-left font-light text-gray-500 dark:text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, voluptates cupiditate voluptate debitis assumenda quasi.</p>
     </div>
 
