--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 dark:bg-gray-900">
+<nav class="absolute w-screen top-0 bg-gradient-to-r from-black to-slate-900 border-gray-200 px-2 sm:px-4 py-2.5">
     <div class="max-w-7xl mx-auto flex flex-wrap items-center justify-between">
       <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
@@ -6,7 +6,7 @@
       </button>
 
       <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-        <ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 dark:border-gray-700">
           <li class="">
             <a href="#" class="block py-2 pl-3 pr-4 text-white bg-teal-500 rounded md:bg-transparent md:text-teal-500 md:p-0 dark:text-white" aria-current="page">Home</a>
           </li>
@@ -23,16 +23,6 @@
             <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
           </li>
         </ul>
-      </div>
-
-      <div class="hidden sm:flex gap-2">
-        <app-button-primary
-        [content]="'Log in'"
-        ></app-button-primary>
-
-        <app-button-secundary
-        [content]="'Sign up'"
-        ></app-button-secundary>
       </div>
     </div>
   </nav>
