--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,18 +1,18 @@
-<div class="w-full p-6 bg-teal-400 dark:bg-slate-800">
+<div class="w-full p-10 bg-teal-400 dark:bg-slate-800">
     <!--Container-->
-    <div class="m-auto max-w-7xl flex flex-col-reverse py-5 md:p-0 md:flex-row md:justify-between items-center gap-20">
-        <div class="bg-gray-900 w-full h-96">
+    <div class="m-auto max-w-5xl flex flex-col-reverse py-0 sm:py-10 md:flex-row md:justify-between items-center gap-10">
+        <div class="bg-gray-100 dark:bg-gray-900 w-96 sm:w-96 h-96 rounded-bl-[100px] sm:m-0">
             
         </div>
 
         <!--title and description-->
-        <div class="w-full md:max-w-xl">
+        <div class="max-w-md py-10">
             <h3 class="mb-8 text-center md:text-left text-4xl font-extrabold leading-none tracking-tight text-white md:text-5xl dark:text-white">A bit about me</h3>
             <p class="mb-3 text-left font-light text-slate-100 dark:text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis officiis voluptates libero perspiciatis iste eum numquam dolore praesentium, non, fugit iure nemo totam amet aut in magni exercitationem itaque.</p>
             <p class="mb-3 text-left font-light text-slate-100 dark:text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis veritatis officiis voluptates libero perspiciatis iste eum numquam dolore praesentium, non, fugit iure nemo totam amet aut in magni exercitationem itaque.</p>
 
             <!--social media-->
-            <div class="flex mt-8 pr-4 gap-2 justify-end">
+            <div class="flex mt-3 sm:mt-10 pr-4 gap-2 justify-end">
                 <app-button-secundary
                     [content]="'GitHub'"
                 ></app-button-secundary>
