--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,18 +1,18 @@
 <!--HEADER-->
-<header class="w-screen h-screen bg-gradient-to-r from-black to-slate-900">
+<header class="w-screen h-screen bg-gradient-to-r from-black to-slate-900 relative top-0">
   <app-nav></app-nav>
   <!--CONTENT CONTAINER-->
-  <div class="max-w-7xl h-full m-auto grid grid-cols-1 md:grid-cols-2 items-center overflow-hidden gap-10 px-4 md:px-10">
+  <div class="pt-10 md:pt-0 max-w-7xl h-full m-auto flex flex-col md:flex-row items-center overflow-hidden md:gap-10 px-8 md:px-10">
 
     <!--PRESENTATION CONTAINER-->
-    <div>
-      <h1 class="text-2xl text-gray-200 font-bold">Hi there,</h1>
-      <h2 class="text-white text-7xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-purple-300 to-red-200">I'm Lucas</h2>
+    <div class="max-w-sm sm:w-full m-auto">
+      <h1 class="text-lg sm:text-2xl text-gray-200 font-bold">Hi there,</h1>
+      <h2 class="text-white text-4xl sm:text-7xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-purple-300 to-red-200">I'm Lucas</h2>
       <p class="mt-2 text-teal-300">FULL STACK DEVELOPER JUNIOR</p>
-      <p class="my-6 font-light text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis aliquam at quod dolores commodi saepe facere ipsa et aliquid autem, veritatis exercitationem veniam fugit velit id cumque sequi excepturi nisi.</p>
+      <p class="my-6 font-light text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis aliquam at quod dolores commodi.</p>
 
       <!--BUTTONS-->
-      <div class="mt-10 flex flex-col min-[311px]:flex-row gap-2 justify-center md:justify-start">
+      <div class="mt-10 flex flex-col min-[400px]:flex-row gap-6 sm:gap-2 justify-center md:justify-start">
         <!--Button primary-->
         <app-button-primary
         [content]="'Contact me'"
@@ -26,15 +26,23 @@
     </div>
 
     <!--PICTURE CONTAINER-->
-    <div class="w-full h-full flex justify-center items-center">
+    <div class="hidden md:flex w-full h-full justify-center items-center">
       <div class="w-80 h-80 bg-slate-800 rounded-3xl flex items-end">
         <img src="../../../assets/memoji.png" class="" alt="">
       </div>
-      <div class="relative shadow-md right-96 top-40 w-24 h-24 bg-gradient-to-br from-blue-300 to-teal-200 rounded-3xl"></div>
-      <div class="absolute right-36 top-32 w-32 h-32 bg-gradient-to-br from-purple-100 to-red-200 rounded-3xl"></div>
-      <div class="absolute shadow-md right-10 top-[-24px] w-48 h-48 bg-gradient-to-br from-purple-300 to-blue-200 rounded-3xl"></div>
+      <div class="hidden lg:block relative md:relative shadow-md right-4 md:right-96 top-32 md:top-40 w-24 h-24 bg-gradient-to-br from-blue-300 to-teal-200 rounded-3xl"></div>
+      <div class="hidden md:block absolute right-36 top-32 w-32 h-32 bg-gradient-to-br from-purple-100 to-red-200 rounded-3xl"></div>
+      <div class="hidden md:block absolute shadow-md right-10 top-[-24px] w-48 h-48 bg-gradient-to-br from-purple-300 to-blue-200 rounded-3xl"></div>
 
     </div>  
     
+  </div>
+
+  <div class="absolute bottom-16 w-full flex justify-center text-white gap-2">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 13.5L12 21m0 0l-7.5-7.5M12 21V3" />
+    </svg>    
+    <p class="hidden md:block">Scroll down</p>
+    <p class="block md:hidden">Slide down</p>
   </div>
 </header>
