--- a/src/app/components/skills-and-services/skills-and-services.component.html
+++ b/src/app/components/skills-and-services/skills-and-services.component.html
@@ -1,16 +1,31 @@
-<div class="w-full py-16 px-6">
-<!--Container-->
-<div class="m-auto max-w-7xl flex flex-col md:flex-row md:justify-between gap-10 items-center">
-    <!--title and description-->
-    <div class="w-full md:w-96">
-        <h3 class="mb-4 text-center md:text-left text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white">My skills & services</h3>
-        <p class="mb-3 text-center md:text-left font-light text-gray-500 dark:text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, voluptates cupiditate voluptate debitis assumenda quasi.</p>
-    </div>
+<div class="w-full py-20">
+    <!--Container-->
+    <div class="m-auto max-w-7xl grid gap-3">
+        <div class="max-w-lg m-auto px-12 sm:p-0 grid gap-5">
+            <h3 class="text-center text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white">My skills & services</h3>
+            <p class="mb-3 text-center font-light text-gray-500 dark:text-teal-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, voluptates cupiditate voluptate debitis assumenda quasi.</p>
+        </div>
 
-    <!--card-->
-    <div class="w-full md:max-w-xl grid grid-flow-row justify-center md:justify-between mt-10 sm:mt-0 sm:grid-cols-2 gap-4">
-        <app-card></app-card>
-        <app-card></app-card>
+        <div class="m-auto w-full md:max-w-5xl grid grid-flow-row justify-center md:justify-between mt-12 sm:grid-cols-2 md:grid-cols-3 gap-5 px-10">
+            <app-card></app-card>
+            <app-card></app-card>
+            <app-card></app-card>
+        </div>
     </div>
 </div>
-</div>
+
+<!--
+     <div class="m-auto max-w-7xl flex flex-col md:flex-row md:justify-between gap-10 items-center">
+        
+        <div class="w-full md:w-96">
+            <h3 class="mb-4 text-center md:text-left text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white">My skills & services</h3>
+            <p class="mb-3 text-center md:text-left font-light text-gray-500 dark:text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, voluptates cupiditate voluptate debitis assumenda quasi.</p>
+        </div>
+
+        
+        <div class="w-full md:max-w-xl grid grid-flow-row justify-center md:justify-between mt-10 sm:mt-0 sm:grid-cols-2 gap-4">
+            <app-card></app-card>
+            <app-card></app-card>
+        </div>
+    </div>
+-->
