✨ Add new features

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -2,7 +2,7 @@
     <!--Container-->
     <div class="m-auto max-w-7xl grid gap-3">
         <div class="max-w-lg m-auto px-12 sm:p-0 grid gap-5">
-            <h3 class="text-center text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white">My skills & services</h3>
+            <h3 class="text-center text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white">My lasts works</h3>
             <p class="mb-3 text-center font-light text-gray-500 dark:text-teal-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, voluptates cupiditate voluptate debitis assumenda quasi.</p>
         </div>
 
@@ -10,6 +10,18 @@
             <app-card></app-card>
             <app-card></app-card>
             <app-card></app-card>
+            <app-card></app-card>
+            <app-card></app-card>
+            <app-card></app-card>
+        </div>
+
+        <div class="max-w-lg m-auto px-12 sm:p-0 flex gap-5 mt-10">
+            <app-button-primary
+                [content]="'Start a new project'"
+            ></app-button-primary>
+            <app-button-secundary
+                [content]="'View all my works'"
+            ></app-button-secundary>
         </div>
     </div>
 </div>
