--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -2,4 +2,6 @@
     <app-header></app-header>
     <app-skills></app-skills>
     <app-about></app-about>
+    <app-projects></app-projects>
+    <app-contact></app-contact>
 </div>
